examples/test/testpolicy149.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy149
  namespace: namespace66
spec:
  podSelector:
    matchLabels:
      key20: value49
      key17: value28
      key16: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value27
          key12: value2
      podSelector:
        matchLabels:
          key0: value8
